# SPHinXsys_Medical_Engineering

./: CMakeLists.txt  README.md
sphinxsys_lib/src/shared/particle_dynamics/fluid_dynamics/: transport_velocity_correction.h
sphinxsys_lib/src/shared/particle_dynamics/relax_dynamics/: relax_thick_shell.cpp  relax_thick_shell.h
sphinxsys_lib/tests/extra_source_and_tests/case_3d_aorta_SV0024_Windkessel_shell/: CMakeLists.txt  aorta_SV0024_Windkessel_shell.cpp
sphinxsys_lib/tests/extra_source_and_tests/case_3d_carotid_VIPO_shell/: carotid_VIPO_shell.cpp
sphinxsys_lib/tests/extra_source_and_tests/case_3d_carotid_VIPO_shell/data/: bif_artery.STL  carotid_fluent_parsed_vtp.vtp
sphinxsys_lib/tests/extra_source_and_tests/extra_src/shared/pressure_boundary/: hemodynamic_indices.cpp  hemodynamic_indices.h  particle_generation_and_detection.cpp  particle_generation_and_detection.h  windkessel_bc.h
sphinxsys_lib/tests/extra_source_and_tests/test_2d_channel_windkessel_rigid_shell/: CMakeLists.txt  channel_windkessel_rigid_shell.cpp
tests/case_3d_aorta_SV0024_Windkessel_shell/: aorta_SV0024_Windkessel_shell.cpp
tests/case_3d_stenosed_resistance_shell/: stenosed_resistance_shell.cpp
tests/case_3d_stenosed_resistance_shell/data/: Obstacle_rld.xml
